# bazzite-htpc

./: .gitignore  Containerfile  Justfile  README.md  cosign.pub
.github/workflows/: build.yml
build_files/: build.sh
disk_config/: disk.toml  iso.toml
htpc-cec/: .gitignore  README.md  htpc-cec.spec  htpc-cecd.spec  install-deps.sh  install_deps_ubuntu.sh  main.py  pyproject.toml  requirements.txt
htpc-cec/src/: client.py  logger.py  main.py
htpc-cec/src/htpc-cec/: __main__.py
htpc-cec/src/htpc-cec-daemon/: __main__.py
htpc-cec/src/htpc_cec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
htpc-cec/src/shared/: Command.py  __init__.py  const.py  logger.py
htpc-homepage/: .prettierrc  README.md  package.json  svelte.config.js
htpc-homepage/src/: app.css  app.d.ts
htpc-homepage/src/lib/: index.ts
htpc-homepage/src/routes/: +page.server.ts  +page.svelte  config.remote.ts
htpc-homepage/testdata/: test_homepage_config.json
python-cec/: Command.py  cec-daemon.service  client.spec  const.py  main.spec  pyvenv.cfg
system_files/etc/keyd/: default.conf
system_files/etc/sddm.conf.d/: bazzite-htpc.conf  steamos.conf
system_files/etc/tmpfiles.d/: firefox-profile.conf
system_files/firefox/: .gitignore  addons.json  content-prefs.sqlite  extensions.json  prefs.js
system_files/firefox/extensions/: langpack-ach@firefox.mozilla.org.xpi  langpack-an@firefox.mozilla.org.xpi  langpack-az@firefox.mozilla.org.xpi  langpack-bn@firefox.mozilla.org.xpi  langpack-br@firefox.mozilla.org.xpi  langpack-ca-valencia@firefox.mozilla.org.xpi  (+42 more)
(+112 files in other folders)
