[project]
name = "htpc-cec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cec>=0.2.8",
    "posix-ipc>=1.3.0",
    "python-daemon>=3.1.2",
]

#[project.scripts]
#htpc-cec-daemon = "daemon:main"
#htpc-cec = "client:main"

[tool.uv]
package = true
